# Antigravity-Trading

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_backtest.py  run_real_backtest.py  seed_strategies.py  supabase_schema.sql  test_api.py  test_bigul.py  test_bigul2.py  vercel.json
.agents/workflows/: strategy-backtest.md
api/: index.py  requirements.txt
brokers/: base.py  bigul_broker.py  dhan_broker.py  kotak_broker.py
core/: __init__.py  config.py  event_bus.py  exceptions.py  logger.py  models.py
dashboard/api/: main.py
dashboard/api/routes/: __init__.py  backtest.py  data.py  strategies.py  strategy_ai.py
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/public/: strat_01_trades.json
dashboard/frontend/src/app/: globals.css  layout.tsx  (+1 more)
data/: historical.py  instruments.py  storage.py  supabase_storage.py
engine/: analytics.py  backtester.py  codegen_backtester.py  cost_model.py  executor.py  forward_tester.py  optimizer.py  options_backtester.py  order_simulator.py  portfolio.py  risk_manager.py  strategy_sdk.py
reports/: comparison_20260220_195227.html  report_MA_Crossover_20260220_195015.html  report_generator.py  strategy_comparison.py
scripts/: audit_data.py  check_gemini.py  fetch_dhan_data.py  fetch_expired_options.py  run_codegen_test.py  seed_strategies.py
scripts/strategies/: export_trades.py  strat_01_straddle_reentry.py
strategy/: ai_strategy_parser.py  base.py  indicators.py  options.py  portfolio_manager.py  strategy_config.py
strategy/examples/: __init__.py  simple_ma_crossover.py
(+19 files in other folders)
