[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "antigravity-trading"
version = "0.1.0"
description = "Strategy backtester, forward tester, live executor for Indian markets (NSE, BSE, MCX)"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Data
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=14.0",

    # Indicators
    "pandas-ta>=0.3.14b1",

    # Options pricing
    "py-vollib>=1.0.1",
    "scipy>=1.11",

    # Broker SDKs
    "dhanhq>=2.0",

    # Web dashboard
    "fastapi>=0.109",
    "uvicorn[standard]>=0.25",
    "websockets>=12.0",

    # Utilities
    "httpx>=0.26",
    "aiofiles>=23.2",
    "rich>=13.7",
    "pyotp>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
